FIX(Project): aws Elastic ip 변경